Fix failing code action tests